cosmetic: simplify code using Java 11 Set.of feature